crates/formatter/tests/snapshots/snapshots__fixtures__000497_group_ai_budgets.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into group_ai_budgets (group_id, spend_limit_micros)
values ('bb640d07-ca8a-4869-b6bc-ae61ebb2fda1', 500000000);
