crates/formatter/tests/snapshots/snapshots__fixtures__000502_user_skills.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Inserts a user skill fixture so migration coverage includes the table.
insert into user_skills (
	id,
	user_id,
	name,
	description,
	content,
	created_at,
	updated_at
)
values
	(
		'7f070eb2-991e-4f7f-b780-40c4e0f49001',
		'30095c71-380b-457a-8995-97b8ee6e5307',
		'example-skill',
		'Example skill fixture.',
		'Example content.',
		'2026-05-07 00:00:00+00',
		'2026-05-07 00:00:00+00'
	);
