crates/formatter/tests/snapshots/snapshots__fixtures__000503_ai_providers_schema_expand.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into user_ai_provider_keys (id, user_id, ai_provider_id, api_key)
values
	(
		'8e3c6e18-2b75-4c3f-9b35-9d1c6f4e1c01',
		'30095c71-380b-457a-8995-97b8ee6e5307',
		'8e3c6e18-2b75-4c3f-9b35-9d1c6f4e1a01',
		'fixture-user-openai-key'
	);
