crates/formatter/tests/snapshots/snapshots__fixtures__000513_user_ai_budget_overrides.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
-- Seed a group_members row so the override below references a real
-- membership.
insert into group_members (user_id, group_id)
values
	(
		'30095c71-380b-457a-8995-97b8ee6e5307',
		'bb640d07-ca8a-4869-b6bc-ae61ebb2fda1'
	)
on conflict do nothing;

insert into user_ai_budget_overrides (user_id, group_id, spend_limit_micros)
values
	(
		'30095c71-380b-457a-8995-97b8ee6e5307',
		'bb640d07-ca8a-4869-b6bc-ae61ebb2fda1',
		500000000
	);
