crates/formatter/tests/snapshots/snapshots__fixtures__000536_ai_user_daily_spend.up.snap
---
source: crates/formatter/tests/snapshots.rs
expression: formatted
---
insert into ai_user_daily_spend (user_id, effective_group_id, day, spend_micros)
values
	(
		'30095c71-380b-457a-8995-97b8ee6e5307',
		'bb640d07-ca8a-4869-b6bc-ae61ebb2fda1',
		'2024-06-15',
		100000
	);
